--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 	<h2>메이플랜드 홀심 알리미</h2>
+	<p>메이플랜드 해상도 1920x1080</p>
+	<p>설정 - 그래픽 - 종합품질 - 높음</p>
+	<p>위 설정대로 세팅 후 "화면공유" 버튼 클릭 창 - 메이플스토리 월드 공유</p>
+	<p>저 혼자 쓰려고 만든거라 꼭 사냥터나 마을에서 테스트하고 사용하세요.</p>
+	<p>문의사항은 김비건 귓 주세요.</p>
 	<button id="startBtn">화면공유</button>
 	<span id="status">🔴 동작 대기중</span>
 	<video id="video" autoplay playsinline></video>
