--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<p>위 설정대로 세팅 후 "화면공유" 버튼 클릭 창 - 메이플스토리 월드 공유</p>
 	<p>저 혼자 쓰려고 만든거라 꼭 사냥터나 마을에서 테스트하고 사용하세요.</p>
 	<p>문의사항은 김비건 귓 주세요.</p>
+	<p>QHD모니터 메랜해상도 1920 에서 정상적으로 돌아감 FHD는 작업중</p>
 	<button id="startBtn">화면공유</button>
 	<span id="status">🔴 동작 대기중</span>
 	<video id="video" autoplay playsinline></video>
