--- a/index.html
+++ b/index.html
@@ -1,35 +1,88 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-795SY2E8E3"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	
-	  gtag('config', 'G-795SY2E8E3');
-	</script>
 	<meta charset="UTF-8">
 	<title>메이플랜드 홀심 알리미</title>
-	<script async src="https://docs.opencv.org/4.8.0/opencv.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="style.css">
-	
+	<script src="https://docs.opencv.org/4.8.0/opencv.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h2>메이플랜드 홀심 알리미</h2>
-	<p>메이플랜드 해상도 1920x1080</p>
-	<p>설정 - 그래픽 - 종합품질 - 높음</p>
-	<p>위 설정대로 세팅 후 "화면공유" 버튼 클릭 창 - 메이플스토리 월드 공유</p>
-	<p>저 혼자 쓰려고 만든거라 꼭 사냥터나 마을에서 테스트하고 사용하세요.</p>
-	<p>문의사항은 김비건 귓 주세요.</p>
-	<p>QHD모니터 메랜해상도 1920 에서 정상적으로 돌아감 FHD는 작업중</p>
+	<button id="selectTemplateBtn">템플릿 이미지 선택</button> 
+	<div id="templateGrid" style="display: none;">
+		<p class="info"> 1280x800, 1280x720 해상도 </p>
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1280/15.png" data-template-name="홀심15초" data-rolw="450" data-rolh="50"  data-roly="122" alt="홀심15초" />
+			<p class="imgalt">15초</p>
+		</div>
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1280/20.png" data-template-name="홀심20초" data-rolw="450" data-rolh="50"  data-roly="122" alt="홀심20초" />
+			<p class="imgalt">20초</p>
+		</div>
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1280/30.png" data-template-name="홀심30초" data-rolw="450" data-rolh="50"  data-roly="122" alt="홀심30초" />
+			<p class="imgalt">30초</p>
+		</div>
+
+
+		<p class="info"> 1600x1024, 1600x900 해상도 </p>
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1600/15.png" data-template-name="홀심15초" data-rolw="500" data-rolh="60"  data-roly="145" alt="홀심15초" />
+			<p class="imgalt">15초</p>
+		</div>
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1600/20.png" data-template-name="홀심20초" data-rolw="500" data-rolh="60"  data-roly="145"  alt="홀심20초" />
+			<p class="imgalt">20초</p>
+		</div>
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1600/30.png" data-template-name="홀심30초" data-rolw="500" data-rolh="60"  data-roly="145" alt="홀심30초" />
+			<p class="imgalt">30초</p>
+		</div>
+
+
+		<p class="info"> 1920x1200, 1920x1080 해상도 </p>
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1920/15.png" data-template-name="홀심15초" data-rolw="700" data-rolh="73"  data-roly="165" alt="홀심15초" />
+			<p class="imgalt">15초</p>
+		</div>
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1920/20.png" data-template-name="홀심20초" data-rolw="700" data-rolh="73"  data-roly="165" alt="홀심20초" />
+			<p class="imgalt">20초</p>
+		</div>
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1920/30.png" data-template-name="홀심30초" data-rolw="700" data-rolh="73"  data-roly="165" alt="홀심30초" />
+			<p class="imgalt">30초</p>
+		</div>
+
+	</div>
+
+    <p>설정된 알림 : <span id="currentTemplateName">없음</span></p>
+
+
 	<button id="startBtn">화면공유</button>
 	<span id="status">🔴 동작 대기중</span>
+
+    <div class="roiset">
+        <h3>탐지 설정</h3>
+        <label for="roiWidthInput">ROI 너비:</label>
+        <input type="number" id="roiWidthInput" value="450"><br>
+        <label for="roiHeightInput">ROI 높이:</label>
+        <input type="number" id="roiHeightInput" value="50"><br>
+        <label for="roiYInput">ROI Y좌표:</label>
+        <input type="number" id="roiYInput" value="120"><br>
+    </div>
+
+    <div>
+
+        <label for="matchThresholdInput">매칭 임계값:</label>
+        <input type="number" id="matchThresholdInput" step="0.001" value="0.973">
+    </div>
+
 	<video id="video" autoplay playsinline></video>
 	<canvas id="canvas"></canvas>
-	<img id="templateImage" src="20.png" alt="이미지" />
+
 	<audio id="alertSound" src="alert.mp3" preload="auto"></audio>
-	<script src="main.js"></script>
+
+	<script src="buff.js"></script>
 </body>
 </html>
