--- a/index.html
+++ b/index.html
@@ -53,14 +53,12 @@
 			<img class="template-thumbnail" src="./img/1920/30.png" data-template-name="홀심30초" data-rolw="700" data-rolh="73"  data-roly="165" alt="홀심30초" />
 			<p class="imgalt">30초</p>
 		</div>
-
 	</div>
-
-    <p>설정된 알림 : <span id="currentTemplateName">없음</span></p>
-
-
 	<button id="startBtn">화면공유</button>
-	<span id="status">🔴 동작 대기중</span>
+	
+    <p>	설정된 알림 : 	<span id="currentTemplateName">없음</span> </p>
+	<p>	실행 여부 : <span id="status">🔴 동작 대기중</span></p>
+	
 
     <div class="roiset">
         <h3>탐지 설정</h3>
@@ -75,7 +73,7 @@
     <div>
 
         <label for="matchThresholdInput">매칭 임계값:</label>
-        <input type="number" id="matchThresholdInput" step="0.001" value="0.973">
+        <input type="number" id="matchThresholdInput" step="0.001" value="0.978">
     </div>
 
 	<video id="video" autoplay playsinline></video>
