--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
 	<h2>메이플랜드 홀심 알리미</h2>
+	<p><span id="explanation">---------------------------------------------------------------------------</span></p>
+
+	<p><span id="explanation">사용방법</span></p>
+	<p><span id="explanation">1.템플릿 이미지 해상도 및 알림시간 선택</span></p>
+	<p><span id="explanation">2.화면공유 클릭 "MapleStory Worlds" 선택 공유</span></p>
+	<p><span id="explanation">3.실행 여부 🟢 화면 공유 중 및 버프창이 보이면 동작확인 </span></p>
+	<p><span id="explanation">위 설명으로도 어렵거나 동작되지 않는분은 메이플랜드<br>"김비건" 귓 또는 우편 또는 아래의 주소로 문의 주세요.</span></p>
+	<p><span id="explanation"><a href="https://open.kakao.com/o/guSNpDDh" target="_blank">홀심 알림 문의</a></span></p>
+
+	<p><span id="explanation">---------------------------------------------------------------------------</span></p>
+
+
+
 	<button id="selectTemplateBtn">템플릿 이미지 선택</button> 
 	<div id="templateGrid" style="display: none;">
 		<p class="info"> 1280x800, 1280x720 해상도 </p>
