--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-795SY2E8E3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-795SY2E8E3');
+</script>
 	<meta charset="UTF-8">
 	<title>메이플랜드 홀심 알리미</title>
 	<script src="https://docs.opencv.org/4.8.0/opencv.js" type="text/javascript"></script>
