--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
 			<img class="template-thumbnail" src="./img/1920/20.png" data-template-name="홀심20초" data-rolw="700" data-rolh="73"  data-roly="165" alt="홀심20초" />
 			<p class="imgalt">20초</p>
 		</div>
+		
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1920/25.png" data-template-name="홀심25초" data-rolw="700" data-rolh="73"  data-roly="165" alt="홀심25초" />
+			<p class="imgalt">20초</p>
+		</div>
+		
 		<div class="template-item">
 			<img class="template-thumbnail" src="./img/1920/30.png" data-template-name="홀심30초" data-rolw="700" data-rolh="73"  data-roly="165" alt="홀심30초" />
 			<p class="imgalt">30초</p>
