--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<p><span id="explanation">3.실행 여부 🟢 화면 공유 중 및 버프창이 보이면 동작확인 </span></p>
 	<p><span id="explanation">🔴주의사항🔴<br>메이플랜드 해상도 변경 후 창 크기를 변경해서는 안됩니다.<br> FHD모니터는 1920 안됩니다. 현재 사용중인 해상도가 안맞는 경우 다른해상도 변경 후 사용할 해상도로 변경</span></p>
 	<p><span id="explanation">위 설명으로도 어렵거나 동작되지 않는분은 메이플랜드<br>"김비건" 귓 또는 우편 또는 아래의 주소로 문의 주세요.</span></p>
+	<p><span id="explanation">2025-07-24 업데이트 이후 채널변경 하면 해상도 변경되는 이슈가 있어서 채널변경되면 꼭 해상도를 다른 해상도로 변경했다가 사용하실 해상도로 재설정 하셔야합니다.</span></p>
 	<p><span id="explanation"><a href="https://open.kakao.com/o/guSNpDDh" target="_blank">홀심 알림 문의</a></span></p>
 
 	<p><span id="explanation">---------------------------------------------------------------------------</span></p>
