--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	<p><span id="explanation">위 설명으로도 어렵거나 동작되지 않는분은 메이플랜드<br>"김비건" 귓 또는 우편 또는 아래의 주소로 문의 주세요.</span></p>
 	<p><span id="explanation">2025-07-24 업데이트 이후 채널변경 하면 해상도 변경되는 이슈가 있어서 채널변경되면 꼭 해상도를 다른 해상도로 변경했다가 사용하실 해상도로 재설정 하셔야합니다.</span></p>
 	<p><span id="explanation"><a href="https://open.kakao.com/o/guSNpDDh" target="_blank">홀심 알림 문의</a></span></p>
+	
+	<p><span id="explanation"><a href="https://open.kakao.com/o/s4UYDmIh" target="_blank">본메코디 제작문의(메랜메소 가능)</a></span></p>
+
 
 	<p><span id="explanation">---------------------------------------------------------------------------</span></p>
 
