--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 			<img class="template-thumbnail" src="./img/1600/20.png" data-template-name="홀심20초" data-rolw="500" data-rolh="60"  data-roly="145"  alt="홀심20초" />
 			<p class="imgalt">20초</p>
 		</div>
+		
+		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1600/25.png" data-template-name="홀심25초" data-rolw="500" data-rolh="60"  data-roly="145"  alt="홀심25초" />
+			<p class="imgalt">25초</p>
+		</div>
+		
 		<div class="template-item">
 			<img class="template-thumbnail" src="./img/1600/30.png" data-template-name="홀심30초" data-rolw="500" data-rolh="60"  data-roly="145" alt="홀심30초" />
 			<p class="imgalt">30초</p>
@@ -117,3 +123,4 @@
 	<script src="buff.js"></script>
 </body>
 </html>
+
