--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 
 		<p class="info"> 1600x1024, 1600x900 해상도 </p>
 		<div class="template-item">
+			<img class="template-thumbnail" src="./img/1600/10.png" data-template-name="홀심10초" data-rolw="500" data-rolh="60"  data-roly="145" alt="홀심10초" />
+			<p class="imgalt">10초</p>
+		</div>
+		<div class="template-item">
 			<img class="template-thumbnail" src="./img/1600/15.png" data-template-name="홀심15초" data-rolw="500" data-rolh="60"  data-roly="145" alt="홀심15초" />
 			<p class="imgalt">15초</p>
 		</div>
@@ -123,4 +127,5 @@
 	<script src="buff.js"></script>
 </body>
 </html>
+
 
